<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">613824922094851</string>

    <!-- admob key to display the banner -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">MoBike</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">MoBike</string>
    <string name="start_button">START</string>
    <string name="pause_button">PAUSE</string>
    <string name="stop_button">STOP</string>
    <string name="resume_button">RESUME</string>
    <string name="title_activity_summary">Route Summary</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="title_activity_share">Share</string>
    <string name="record_new_route">RECORD NEW ROUTE</string>
    <string name="share">SHARE</string>
    <string name="share_textview">You can visualize the route juts recorded at this URL:</string>
    <string name="shared_message">Hey! Look at motorcyle trip I just had!</string>
    <string name="uploading_toast">Uplaoding...</string>
    <string name="logging_in">Logging in...</string>
    <string name="title_activity_main">Mobike</string>
    <string name="join">JOIN</string>
    <string name="decline">DECLINE</string>
    <string-array name="fragment_titles">
        <item>Record</item>
        <item>Routes</item>
        <item>Events</item>
    </string-array>
    <string-array name="route_types">
        <item>All Routes</item>
        <item>My Routes</item>
    </string-array>
    <string-array name="event_types">
        <item>All Events</item>
        <item>My Events</item>
        <item>Invitations</item>
    </string-array>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_route">Route</string>
    <string name="route_name_hint">Name*</string>
    <string name="route_description_hint">Description</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="stop">Stop</string>
    <string name="stop_registration">Are you sure you want to stop the registration?</string>
    <string name="stop_registration_no_positions">Wait! There is no recorded position yet!\n Are you sure you want to stop the registration?</string>
    <string name="route_difficulty_hint">Difficulty* (number between 1 and 10)</string>
    <string name="route_bends_hint">Bends* (number between 1 and 10)</string>
    <string name="route_type_hint">Route type</string>
    <string name="new_event">New Event</string>
    <string name="event_name_hint">Name</string>
    <string name="event_description_hint">Description</string>
    <string name="event_date">Choose a date</string>
    <string name="pick_date">PICK DATE</string>
    <string name="event_time">Choose time</string>
    <string name="pick_time">PICK TIME</string>
    <string name="invite_user_hint">Invite other users</string>
    <string name="invite">INVITE</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="pick_route">PICK ROUTE</string>
    <string name="title_activity_event_creation">Event Creation</string>
    <string name="event_start_location_hint">Start location</string>
    <string name="load_more">LOAD MORE...</string>
    <string name="account">Account</string>
    <string name="edit">EDIT</string>
    <string name="new_review">REVIEW THIS ROUTE!</string>
    <string name="title_activity_review_creation">ReviewCreationActivity</string>
    <string name="new_review_title">New Review</string>
    <string name="review_comment_hint">Comment</string>
    <string name="send">SEND</string>
    <string name="title_activity_nickname">NicknameActivity</string>
    <string name="user_registration">Registration</string>
    <string name="nickname_hint">Nickname</string>
    <string name="bike_hint">Bike model</string>
    <string name="title_activity_account_details">Account Details</string>
    <string name="nickname_activity_string">Welcome to MoBike!\nYou are not registered yet, insert your nickname and bike model and press SEND. The nickname will be displayed instead of your real name.</string>
    <string name="review_after_upload_text">You can insert the first review of the route you just recorded!</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="bike">Bike</string>
    <string name="title_activity_route_search">Route Search</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="pick_this_route">Pick this route</string>
    <string name="title_activity_fragment">Select Route</string>
    <string name="search">SEARCH</string>
    <string name="start_location">Start Location:</string>
    <string name="end_location">End Location:</string>
    <string name="required_fields">* fields are required</string>
    <string name="view_route_details">VIEW ROUTE DETAILS</string>
    <string name="created_on">Created on</string>
    <string name="created_by">Created by</string>
    <string name="difficulty">Difficulty:</string>
    <string name="bends">Bends:</string>
    <string name="type">Type:</string>
    <string name="initial_length">0,0 km</string>
    <string name="initial_duration">0 h 0 m 0 s</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="title_activity_full_screen_map">Route Map</string>
    <string name="nickname_already_exists">The nickname you entered already exists, please choose another one.</string>
    <string-array name="route_type_selection">
        <item>Mountain</item>
        <item>Hill</item>
        <item>Coast</item>
        <item>Plain</item>
        <item>Mixed</item>
    </string-array>
    <string name="accepted">ACCEPTED</string>
    <string name="declined">DECLINED</string>
    <string name="title_activity_poicreation">POICreationActivity</string>
    <string name="poi_creation_title">New POI</string>
    <string name="poi_creation_message_not_recording">Create a new Point Of Interest at the current location and it will be visible to everybody!</string>
    <string name="poi_creation_message_recording">Create a new Point Of Interest  at the current location, it will be associated with the route you are recording so everybody will know abuot this place!</string>
    <string name="poi_creation_category">Category:</string>
    <string name="poi_title_hint">Name</string>
    <string name="create_poi_button">CREATE</string>

    <string-array name="poi_categories">
        <item>Viewpoint</item>
        <item>Gas Station</item>
        <item>Restaurant</item>
        <item>Other</item>
    </string-array>
    <string name="poi_viewpoint">Viewpoint</string>
    <string name="poi_gas_station">Gas Station</string>
    <string name="poi_restaurant">Restaurant</string>
    <string name="poi_other">Other</string>

    <string name="logout">Logout</string>
    <string name="review"> review</string>
    <string name="reviews"> reviews</string>
    <string name="users_accepted">ACCEPTED</string>
    <string name="users_invited">INVITED</string>
    <string name="users_declined">DECLINED</string>
    <string name="pending_inivtations_dialog_title">Pending Invitations</string>
    <string name="pending_invitations_dialog_message">Hey! You have pending invitations to events, check them!</string>
    <string name="no_recorded_positions_message">There are no recorded positions yet!</string>
    <string name="gps_settings_dialog_title">GPS Settings</string>
    <string name="gps_settings_dialog_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">SETTINGS</string>
    <string name="gps_settings_dialog_cancel">CANCEL</string>
    <string name="login_welcome_back_message">Welcome back</string>
    <string name="login_not_registered_message">You are not registered yet, please create an account!</string>
    <string name="registration_welcome_message">Welcome</string>
    <string name="review_deleted_successfully">Review deleted successfully</string>
    <string name="review_edited_successfully">Review edited successfully</string>
    <string name="participation_sent_successfully">Participation sent successfully</string>
    <string name="poi_created_successfully">POI created successfully</string>
    <string name="no_pois_associated_with_route">No POIs associated with the route</string>
    <string name="pois_uploaded_successfully">POIs uploaded successfully</string>
    <string name="event_created">Event created!</string>
    <string name="review_uploaded_successfully">Review uploaded successfully</string>
    <string name="upload_completed">Upload completed!</string>
    <string name="bug_report">Send bug report</string>
    <string name="send_email">Contact us!</string>
    <string name="first_time_welcome_title">Welcome!</string>
    <string name="first_time_welcome_message">Welcome to MoBike!\nThe application is still under development and we are sorry for any bugs/errors that may occur.\Thank you and have fun!</string>
    <string name="change_account_button">CHANGE ACCOUNT</string>
    <string name="no_route_description">No description available</string>
    <string name="route_name_label">Name</string>
    <string name="route_description_label">Description</string>
    <string name="route_difficulty_label">Difficulty (number between 1 and 10)</string>
    <string name="route_bends_label">Bends (number between 1 and 10)</string>
    <string name="route_type_label">Type:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_nickname_label">Nickname</string>
    <string name="account_bikemodel_label">Bike model</string>

</resources>
