<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.mobiketeam.mobike.MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" /> -->

    <item android:id="@+id/action_account"
        android:title="@string/account"
        android:icon="@drawable/ic_account_white_36dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="2" />

    <item android:id="@+id/action_bug_report"
        android:title="@string/bug_report"
        app:showAsAction="never"
        android:orderInCategory="3" />

    <item android:id="@+id/action_send_email"
        android:title="@string/send_email"
        app:showAsAction="never"
        android:orderInCategory="4"/>

</menu>
