<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mobike.mobike.POICreationActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/poi_creation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/poi_creation_message_not_recording" />

    <!-- title -->
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/poi_title_hint"
        android:maxLines="2"
        android:background="@drawable/abc_edit_text_material" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/poi_creation_category"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/poi_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_poi_button"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:background="@drawable/blue_button" />

</LinearLayout>
