<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mobike.mobike.EventCreationActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"/>

        <TextView android:text="@string/new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/create"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
    </RelativeLayout>

<!--
    <TextView android:text="@string/new_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:drawableLeft="@drawable/close_red_48dp"
            android:drawableStart="@drawable/close_red_48dp"
            android:text="@string/cancel"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/red"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/create"
            android:layout_weight="1"
            android:drawableLeft="@drawable/check_green_48dp"
            android:drawableStart="@drawable/check_green_48dp"
            android:text="@string/create"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/lime"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"/>

    </LinearLayout> -->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- name -->
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="20dp"
        android:maxLines="1"
        android:hint="@string/event_name_hint"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <!-- description -->
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/event_description_hint"
        android:minLines="2"
        android:maxLines="2"/>

        <EditText
            android:id="@+id/start_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/event_start_location_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <!-- date -->
        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/event_date"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/pick_date"
            android:background="@drawable/blue_button"
            android:textColor="@color/white"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <!-- time -->
            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/event_time"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/pick_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/pick_time"
                android:background="@drawable/blue_button"
                android:textColor="@color/white"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <!-- invite users -->
        <MultiAutoCompleteTextView
            android:id="@+id/invite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minLines="1"
            android:maxLines="3"
            android:hint="@string/invite_user_hint"/>
<!--
        <Button
            android:id="@+id/invite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/invite"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/> -->
    </LinearLayout>

    <Button
        android:id="@+id/pick_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pick_route"
        android:background="@drawable/blue_button"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
</LinearLayout>
</ScrollView>
</LinearLayout>
