<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginBottom="20dp"
        android:id="@+id/summary_map"
        tools:context="com.mobike.mobike.SummaryActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/length_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/duration_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- text view for the creator of the event -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/length_text_view"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/car_grey_24dp"
            android:drawableStart="@drawable/car_grey_24dp"
            android:drawablePadding="15dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/duration_text_view"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/clock_grey_24dp"
            android:drawableStart="@drawable/clock_grey_24dp"
            android:drawablePadding="15dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/route_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:hint="@string/route_name_hint"/>

    <EditText
        android:id="@+id/route_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/route_description_hint"
        android:minLines="3"
        android:maxLines="3"/>

    <!-- difficulty -->
    <EditText
        android:id="@+id/route_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:hint="@string/route_difficulty_hint"/>

    <!-- bends -->
    <EditText
        android:id="@+id/route_bends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:hint="@string/route_bends_hint"/>

    <!-- type -->
    <EditText
        android:id="@+id/route_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:hint="@string/route_type_hint"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/button_layout_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:orientation="horizontal">

            <Button android:id="@+id/delete_route_button"
                android:text="@string/delete"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@color/red"
                android:onClick="deleteRoute"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button android:id="@+id/save_route_button"
                android:text="@string/save"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@color/green"
                android:onClick="saveRoute"
                style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
